--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 --- 
-title: "A Minimal Book Example"
-author: "Yihui Xie"
-date: "`r Sys.Date()`"
+title: "Data 534 Daily Project Logs"
+author: "Nathan Smith"
+date: '`r Sys.Date()`'
 site: bookdown::bookdown_site
 documentclass: book
 bibliography:
@@ -9,25 +9,16 @@ bibliography:
 - packages.bib
 biblio-style: apalike
 link-citations: yes
-description: This is a minimal example of using the bookdown package to write a book.
-  The output format for this example is bookdown::gitbook.
+description: Data 534 daily project log for Nathan Smith The output format for this
+  example is bookdown::gitbook.
 ---
 
-# Prerequisites
-
-This is a _sample_ book written in **Markdown**. You can use anything that Pandoc's Markdown supports, e.g., a math equation $a^2 + b^2 = c^2$.
-
-The **bookdown** package can be installed from CRAN or Github:
-
-```{r eval=FALSE}
-install.packages("bookdown")
-# or the development version
-# devtools::install_github("rstudio/bookdown")
-```
-
-Remember each Rmd file contains one and only one chapter, and a chapter is defined by the first-level heading `#`.
-
-To compile this example to PDF, you need XeLaTeX. You are recommended to install TinyTeX (which includes XeLaTeX): <https://yihui.org/tinytex/>.
+# Details
+- Group: Nathan Smith, Mitch Harris, Ryan Koenig
+- Project: caRecall R package
+- Description: API wrapper for the [Vehicle Recalls Database API from Government Canada](https://tc.api.canada.ca/en/detail?api=VRDB).
+- Project repository: https://github.com/WraySmith/caRecall
+- Nathan Smith daily log files repository: https://github.com/WraySmith/data534_project_log
 
 ```{r include=FALSE}
 # automatically create a bib database for R packages
