--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 --- 
 title: "Data 534 Daily Project Logs"
 author: "Nathan Smith"
-date: '`r Sys.Date()`'
+date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
 bibliography:
