--- a/02-jan26.Rmd
+++ b/02-jan26.Rmd
@@ -1,4 +1,5 @@
 # 2020-01-26 {#jan26}
 
 **Items Completed:**
-Setup daily log repository and generated bookdown template: https://github.com/WraySmith/data534_project_log
+
+- Setup daily log repository and generated bookdown template: https://github.com/WraySmith/data534_project_log
